Fix spacing for welcome

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2708,7 +2708,7 @@ input, select, textarea {
 	ul {
 		list-style: disc;
 		margin: 0 0 2rem 0;
-		padding-left: 1rem;
+		/* padding-left: 1rem; */
 	}
 
 		ul li {
@@ -8682,7 +8682,28 @@ div.image.header {
 .headshot-welcome-wrapper {
 	display: flex;
 	justify-content: center;
+	/* border-radius: 100%; */
+	/* height: 100%;
+	width: 100%; */
+	/* width: 3vw; */
+	height: 20vh;
+	justify-content: center;
+  align-items: center;
 }
+
+.image.header {
+}
+
+img.headshot {
+	clip-path: circle(200px at center);
+
+}
+
+/* img.headshot {
+	height: 100%;
+	width: 100%;
+	max-height: 20vh;
+} */
 
 div.education-employment-container {
 	display: flex;
